--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HamTab</title>
+
+  <!-- SEO Meta Tags -->
+  <title>HamTab - Amateur Radio Dashboard | POTA, SOTA, DX Spots & Propagation</title>
+  <meta name="description" content="Modern web-based amateur radio dashboard for POTA, SOTA, and DX spotting. Real-time propagation, satellite tracking, space weather, and more. Free alternative to HamClock.">
+  <meta name="keywords" content="amateur radio, ham radio, POTA, SOTA, DX cluster, propagation, HamClock, satellite tracking, space weather, ham radio dashboard">
+  <meta name="author" content="Steven Cheist">
+  <meta name="theme-color" content="#1a1a1a">
+
+  <!-- Open Graph Meta Tags (Facebook, Discord, LinkedIn) -->
+  <meta property="og:title" content="HamTab - Amateur Radio Dashboard">
+  <meta property="og:description" content="Modern web-based amateur radio dashboard for POTA, SOTA, and DX spotting. Real-time propagation, satellite tracking, and space weather.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hamtab.net">
+  <meta property="og:image" content="https://hamtab.net/og-image.png">
+  <meta property="og:site_name" content="HamTab">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="HamTab - Amateur Radio Dashboard">
+  <meta name="twitter:description" content="Modern web-based amateur radio dashboard for POTA, SOTA, and DX spotting.">
+  <meta name="twitter:image" content="https://hamtab.net/og-image.png">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://hamtab.net">
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "HamTab",
+    "applicationCategory": "WebApplication",
+    "operatingSystem": "Any (Web Browser)",
+    "description": "Modern web-based amateur radio dashboard for POTA, SOTA, and DX spotting with real-time propagation, satellite tracking, and space weather monitoring. Free alternative to HamClock.",
+    "url": "https://hamtab.net",
+    "author": {
+      "@type": "Person",
+      "name": "Steven Cheist"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "featureList": [
+      "Real-time POTA spot tracking",
+      "SOTA activations monitoring",
+      "DX cluster integration",
+      "PSKReporter integration",
+      "Space weather and solar conditions",
+      "Satellite tracking",
+      "Interactive world map with gray line",
+      "Weather alerts and conditions",
+      "Propagation modeling"
+    ]
+  }
+  </script>
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="vendor/leaflet.css" />
   <link rel="stylesheet" href="vendor/MarkerCluster.css" />
   <link rel="stylesheet" href="vendor/MarkerCluster.Default.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- SEO Content (hidden from normal users, visible to search engines and no-JS users) -->
+  <noscript>
+    <div style="padding: 2rem; max-width: 800px; margin: 0 auto; font-family: system-ui, -apple-system, sans-serif; line-height: 1.6;">
+      <h1>HamTab - Modern Amateur Radio Dashboard</h1>
+      <p style="font-size: 1.2rem; color: #666;">HamTab is a free, open-source amateur radio dashboard designed as a modern alternative to HamClock. Track POTA and SOTA activations, monitor DX clusters, view real-time propagation conditions, and track satellites—all in your web browser.</p>
+
+      <h2>Features</h2>
+      <ul style="column-count: 2; column-gap: 2rem;">
+        <li>Real-time POTA (Parks on the Air) spot tracking</li>
+        <li>SOTA (Summits on the Air) activations</li>
+        <li>DX cluster integration</li>
+        <li>PSKReporter integration</li>
+        <li>Space weather and solar conditions</li>
+        <li>Satellite tracking with N2YO integration</li>
+        <li>Interactive world map with gray line</li>
+        <li>Weather alerts and conditions (NWS, Weather Underground)</li>
+        <li>Propagation modeling and ionosonde data</li>
+        <li>Multi-source filtering and watch lists</li>
+        <li>Configurable widgets with drag-and-drop</li>
+        <li>Dark theme optimized for ham shack use</li>
+      </ul>
+
+      <h2>Deployment Options</h2>
+      <p>HamTab supports two deployment modes:</p>
+      <ul>
+        <li><strong>Self-Hosted (Lanmode):</strong> Run on Windows, Linux, or Raspberry Pi with full local control</li>
+        <li><strong>Cloud-Hosted (Hostedmode):</strong> Access via hamtab.net with no installation required</li>
+      </ul>
+
+      <h2>HamClock Alternative</h2>
+      <p>With HamClock installations ceasing to function in June 2026, HamTab provides a modern, actively maintained alternative for the ~10,000+ HamClock users. Built with a stateless architecture and publicly available APIs, HamTab will continue functioning indefinitely.</p>
+
+      <div style="margin-top: 2rem; padding: 1rem; background: #f0f0f0; border-radius: 8px;">
+        <p style="margin: 0; color: #c00;"><strong>JavaScript Required:</strong> Please enable JavaScript in your browser to use HamTab.</p>
+      </div>
+    </div>
+  </noscript>
+
   <!-- Splash screen -->
   <div class="splash-overlay" id="splash">
     <div class="splash-box">
