Update author credits to include both developers
- Steven C Heist (KJ5MMO)
- Francisco J Peebles (KG5DPV)

Updated both meta tag and JSON-LD structured data

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>HamTab - Amateur Radio Dashboard | POTA, SOTA, DX Spots & Propagation</title>
   <meta name="description" content="Modern web-based amateur radio dashboard for POTA, SOTA, and DX spotting. Real-time propagation, satellite tracking, space weather, and more. Free alternative to HamClock.">
   <meta name="keywords" content="amateur radio, ham radio, POTA, SOTA, DX cluster, propagation, HamClock, satellite tracking, space weather, ham radio dashboard">
-  <meta name="author" content="Steven Cheist">
+  <meta name="author" content="Steven C Heist (KJ5MMO), Francisco J Peebles (KG5DPV)">
   <meta name="theme-color" content="#1a1a1a">
 
   <!-- Open Graph Meta Tags (Facebook, Discord, LinkedIn) -->
@@ -38,10 +38,18 @@
     "operatingSystem": "Any (Web Browser)",
     "description": "Modern web-based amateur radio dashboard for POTA, SOTA, and DX spotting with real-time propagation, satellite tracking, and space weather monitoring. Free alternative to HamClock.",
     "url": "https://hamtab.net",
-    "author": {
-      "@type": "Person",
-      "name": "Steven Cheist"
-    },
+    "author": [
+      {
+        "@type": "Person",
+        "name": "Steven C Heist",
+        "additionalName": "KJ5MMO"
+      },
+      {
+        "@type": "Person",
+        "name": "Francisco J Peebles",
+        "additionalName": "KG5DPV"
+      }
+    ],
     "offers": {
       "@type": "Offer",
       "price": "0",
